2018-11-07  Simon Fraser  <simon.fraser@apple.com>

        Some WK1 repaint tests are flakey
        https://bugs.webkit.org/show_bug.cgi?id=190627

        Reviewed by Zalan Bujtas.
        
        New baseline.

        * compositing/masks/compositing-clip-path-change-no-repaint-expected.txt:

2018-11-07  Ross Kirsling  <ross.kirsling@sony.com>

        [WinCairo] Unreviewed layout test gardening.

        * platform/wincairo/TestExpectations:

2018-11-07  Dean Jackson  <dino@apple.com>

        [iOS] WebGL leaks exact GPU type
        https://bugs.webkit.org/show_bug.cgi?id=191393
        <rdar://problem/45788297>

        Reviewed by Tim Horton.

        A test that checks that when the GPU vendor is Apple we're
        returning a generic renderer name.

        * fast/canvas/webgl/hide-some-renderer-info-expected.txt: Added.
        * fast/canvas/webgl/hide-some-renderer-info.html: Added.

2018-11-07  Ali Juma  <ajuma@chromium.org>

        IntersectionObserver GC-dependent tests are flaky
        https://bugs.webkit.org/show_bug.cgi?id=191387

        Reviewed by Chris Dumez.

        Make these tests more robust by triggering GC repeatedly inside a setInterval(). Having only a single call to
        GC is potentially flaky, since that call will early-out and return immediately if a GC is already underway.

        * intersection-observer/root-element-deleted.html:
        * intersection-observer/target-deleted.html:

2018-11-07  Dan Bernstein  <mitz@apple.com>

        Add a pseudoclass that matches img elements that are backed by an attachment
        https://bugs.webkit.org/show_bug.cgi?id=191286
        <rdar://problem/45823554>

        Reviewed by Dean Jackson.

        * fast/css/has-attachment-expected.txt: Added.
        * fast/css/has-attachment.html: Added.
        * platform/win/TestExpectations:

2018-11-07  Ali Juma  <ajuma@chromium.org>

        IntersectionObserverEntry doesn't keep JS wrappers of rects alive