@@ -1,108 +1,0 @@
-(GraphicsLayer
-  (anchor 0.00 0.00)
-  (bounds 800.00 600.00)
-  (visible rect 0.00, 0.00 800.00 x 600.00)
-  (coverage rect 0.00, 0.00 800.00 x 600.00)
-  (intersects coverage rect 1)
-  (contentsScale 2.00)
-  (children 1
-    (GraphicsLayer
-      (bounds 800.00 600.00)
-      (contentsOpaque 1)
-      (visible rect 0.00, 0.00 800.00 x 600.00)
-      (coverage rect 0.00, 0.00 800.00 x 600.00)
-      (intersects coverage rect 1)
-      (contentsScale 2.00)
-      (tile cache coverage 0, 0 800 x 600)
-      (tile size 800 x 600)
-      (top left tile 0, 0 tiles grid 1 x 1)
-      (in window 1)
-      (children 2
-        (GraphicsLayer
-          (position 13.00 18.00)
-          (bounds 210.00 210.00)
-          (drawsContent 1)
-          (visible rect 0.00, 0.00 210.00 x 210.00)
-          (coverage rect -13.00, -18.00 800.00 x 600.00)
-          (intersects coverage rect 1)
-          (contentsScale 2.00)
-        )
-        (GraphicsLayer
-          (position 255.00 18.00)
-          (bounds 210.00 210.00)
-          (drawsContent 1)
-          (visible rect 0.00, 0.00 210.00 x 210.00)
-          (coverage rect -255.00, -18.00 800.00 x 600.00)
-          (intersects coverage rect 1)
-          (contentsScale 2.00)
-          (children 1
-            (GraphicsLayer
-              (offsetFromRenderer width=-5 height=-5)
-              (position 5.00 5.00)
-              (bounds 200.00 200.00)
-              (visible rect 0.00, 0.00 200.00 x 200.00)
-              (coverage rect 0.00, 0.00 200.00 x 200.00)
-              (intersects coverage rect 1)
-              (contentsScale 2.00)
-              (children 1
-                (GraphicsLayer
-                  (offsetFromRenderer width=5 height=5)
-                  (bounds 200.00 400.00)
-                  (drawsContent 1)
-                  (visible rect 0.00, 0.00 200.00 x 200.00)
-                  (coverage rect 0.00, 0.00 200.00 x 200.00)
-                  (intersects coverage rect 1)
-                  (contentsScale 2.00)
-                )
-              )
-            )
-          )
-        )
-      )
-    )
-  )
-)
-
-
-
-(Frame scrolling node
-  (scrollable area size 800 600)
-  (contents size 800 600)
-  (scrollable area parameters 
-    (horizontal scroll elasticity 1)
-    (vertical scroll elasticity 1)
-    (horizontal scrollbar mode 0)
-    (vertical scrollbar mode 0))
-  (visual viewport enabled 1)
-  (layout viewport at (0,0) size 800x600)
-  (min layout viewport origin (0,0))
-  (max layout viewport origin (0,0))
-  (behavior for fixed 0)
-  (children 2
-    (Fixed node
-      (anchor edges: AnchorEdgeLeft AnchorEdgeTop)
-      (viewport rect at last layout at (0,0) size 800x600)
-      (layer position at last layout (13,18))
-      (children 0
-      )
-    )
-    (Fixed node
-      (anchor edges: AnchorEdgeLeft AnchorEdgeTop)
-      (viewport rect at last layout at (0,0) size 800x600)
-      (layer position at last layout (255,18))
-      (children 1
-        (Overflow scrolling node
-          (scrollable area size 200 200)
-          (contents size 200 400)
-          (scrollable area parameters 
-            (horizontal scroll elasticity 1)
-            (vertical scroll elasticity 1)
-            (horizontal scrollbar mode 0)
-            (vertical scrollbar mode 0))
-        )
-      )
-    )
-  )
-)
-
-
