@@ -1,59 +1,0 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Update scroll coordinated status</title>
-    <style>
-      .scrollable {
-          position: fixed;
-          width: 200px;
-          height: 200px;
-          overflow: auto;
-          -webkit-overflow-scrolling: touch;
-          border: 5px solid orange;
-          margin: 5px;
-      }
-      .scrollable-content {
-          width: 100px;
-          height: 100px;
-          background: linear-gradient(135deg, yellow, cyan);
-      }
-      .overflowing {
-          height: 400px;
-      }
-    </style>
-    <script>
-      if (window.testRunner) {
-          testRunner.dumpAsText();
-          testRunner.waitUntilDone();
-      }
-      function doTest()
-      {
-         requestAnimationFrame(() => {
-              document.querySelectorAll('.scrollable-content').forEach((div) => {
-                  div.classList.toggle('overflowing');
-              });
-              if (window.testRunner && window.internals) {
-                  requestAnimationFrame(() => {
-                      document.getElementById('layerTree').innerText = internals.layerTreeAsText(document,
-                         internals.LAYER_TREE_INCLUDES_VISIBLE_RECTS | internals.LAYER_TREE_INCLUDES_TILE_CACHES) + "\n\n" +
-                         internals.scrollingStateTreeAsText() + "\n";
-                      testRunner.notifyDone();
-                  });
-              }
-          });
-      }
-      window.addEventListener('load', doTest, false);
-    </script>
-  </head>
-  <body>
-    <div class="scrollable">
-      <div class="scrollable-content overflowing">
-      </div>
-    </div>
-    <div class="scrollable" style="left: 250px">
-      <div class="scrollable-content">
-      </div>
-    </div>
-    <pre id="layerTree"></pre>
-  </body>
-</html>
